[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/levels/inward_outward/player_path.gd" type="Script" id=1]
[ext_resource path="res://scripts/levels/inward_outward/player_rail.gd" type="Script" id=2]
[ext_resource path="res://art/textures/levels/inward_outward/player_ball.png" type="Texture" id=3]
[ext_resource path="res://art/textures/levels/inward_outward/player_pulse.png" type="Texture" id=4]
[ext_resource path="res://art/textures/levels/inward_outward/hit_ball.png" type="Texture" id=5]

[sub_resource type="Curve2D" id=1]
bake_interval = 4.0
_data = {
"points": PoolVector2Array( -116.003, 63.9398, 116.003, -63.9398, 0, 0, 0, 0, 0, 0, 116, -168, 115.964, 56.028, -115.964, -56.028, 0, -344 )
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 1.0
}, {
"frames": [ null, ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "damaged",
"speed": 6.0
} ]

[sub_resource type="CircleShape2D" id=3]

[node name="PlayerRail" type="Path2D"]
self_modulate = Color( 1, 1, 1, 1 )
curve = SubResource( 1 )
script = ExtResource( 2 )
speed = 0.4

[node name="PlayerPath" type="PathFollow2D" parent="."]
rotate = false
loop = false
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerBall" type="AnimatedSprite" parent="PlayerPath"]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 2 )

[node name="Pulse" type="Sprite" parent="PlayerPath"]
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 4 )

[node name="PulseTween" type="Tween" parent="PlayerPath"]
repeat = true
playback/repeat = true

[node name="Collision" type="Area2D" parent="PlayerPath"]
gravity_vec = Vector2( 0, 0 )

[node name="CollisionShape" type="CollisionShape2D" parent="PlayerPath/Collision"]
shape = SubResource( 3 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="area_entered" from="PlayerPath/Collision" to="." method="_check_for_hits"]
[connection signal="timeout" from="DamageTimer" to="." method="_heal"]
